added testCta feature